--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                     <li>
                         <a href="#economy" title="Ir para a seção de notícias">Economia</a>
                     </li>
+                    <li>
+                        <a href="#entertainment" title="Ir para a seção de notícias">Entretenimento</a>
+                    </li>
+                    <li>
+                        <a href="#technology" title="Ir para a seção de notícias">Tecnologia</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -108,6 +114,87 @@
                     <h3>Alta no preço do barril do petróleo</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="entertainment">
+        <div class="container">
+            <h2>Entretenimento</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/beetlejuice_2.png" alt="beetlejuice_2" />
+                    <header>
+                        <time>27/03/2024 às 21:03</time>
+                    </header>
+                    <h3>Beetlejuice 2: veja trailer e primeiras fotos do filme</h3>
+                    <p>
+                        Os fãs de cinema e da icônica obra de Tim Burton, “Beetlejuice“, foram presenteados com uma emocionante surpresa na última quinta-feira (21), quando a Warner Bros. Pictures lançou o tão aguardado trailer de “Beetlejuice 2”. Com a data de estreia marcada para 6 de setembro, a continuação promete envolver os espectadores em uma jornada ainda mais sombria e divertida.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/a-casa-do-dragao.jpg" alt="a casa do dragão" />
+                    <header>
+                        <time>27/03/2024 às 20:25</time>
+                    </header>
+                    <h3>A Casa do Dragão: Pôsteres revelam divisões; trailers da nova temporada são lançados</h3>
+                    <p>
+                        Chegou a hora de ficar de olho nas novidades que acabaram de sair do forno de A Casa do Dragão! A segunda temporada do spin-off de Game of Thrones, que fez sucesso em 2022, tá chegando com tudo e já veio com seis pôsteres que estão mexendo com nossos corações.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/Star Wars.jpg" alt="Star Wars" />
+                    <header>
+                        <time>27/03/2024 às 19:30</time>
+                    </header>
+                    <h3>Nova série de Star Wars, The Acolyte, tem data de estreia; veja pôster e trailer</h3>
+                    <p>
+                        A aguardada série The Acolyte, ambientada no universo de Star Wars, já tem sua data de lançamento confirmada pela Disney+. Os fãs poderão mergulhar na trama a partir de 4 de junho, quando a série estará disponível para streaming.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="technology">
+        <div class="container">
+            <h2>Tecnologia</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/anatel.jpg" alt="5G" />
+                    <header>
+                        <time>27/03/2024 às 18:46</time>
+                    </header>
+                    <h3>Anatel libera licenciamento e ativação do 5G em mais 395 municípios</h3>
+                    <p>
+                        mais 395 municípios passam a contar com estações de tecnologia 5G. O licenciamento foi autorizado pela Agência Nacional de Telecomunicações (Anatel).
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/spacex.jpg" alt="a casa do dragão" />
+                    <header>
+                        <time>27/03/2024 às 17:50</time>
+                    </header>
+                    <h3>SpaceX realiza com sucesso terceiro voo de teste do foguete Starship; veja vídeo</h3>
+                    <p>
+                        A SpaceX realizou a decolagem do foguete Starship, é o terceiro voo de teste não tripulado do foguete.
+                        A decolagem ocorreu na plataforma de lançamento em Boca Chica, no Texas, Estados Unidos, e foi transmitida ao vivo pelo perfil da companhia no X.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/Windows_10.jpg" alt="Star Wars" />
+                    <header>
+                        <time>27/03/2024 às 16:55</time>
+                    </header>
+                    <h3>Windows 10 vai acabar? Saiba como atualizar e tire dúvidas sobre mudança</h3>
+                    <p>
+                        A Microsoft anunciou que o Windows 10 chegará ao fim no dia 14 de outubro de 2025. Após essa data, o sistema operacional continuará funcionando, mas não receberá mais atualizações de segurança ou qualquer tipo de assistência gratuita.
                     </p>
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
